Field Footprint/objects/Analysis_log__c.object
<CustomObject>
    <fields>
        <fullName>Code_segment__c</fullName>
        <label>Code segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Footprint__c</fullName>
        <label>Footprint</label>
        <referenceTo>FootPrint__c</referenceTo>
        <relationshipLabel>Analysis logs</relationshipLabel>
        <relationshipName>Analysis_logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Analysis log</label>
    <nameField>
        <label>Analysis log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analysis logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>